[package]
authors = ["Byk Motocyklista <lucasfirstthegreat@gmail.com@gmail.com>"]
edition = "2021"
license = "AGPL3"
name = "byczek"
publish = false
version = "0.1.0"

[[bin]]
name = "auth"
path = "services/auth/src/server.rs"

[[bin]]
name = "email"
path = "services/email/src/server.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.9.1"